[package]
name = "esp32"
version = "0.1.0"
authors = ["Arne Berner <arne.berner@student.fh-kiel.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.50.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.94"
rosc = "0.10.1"
embedded-svc = "0.28.0"
esp-idf-hal = "0.44.1"
mfrc522 = "0.8.0"
mpu6050-dmp = "0.5.0"
tcs3472 = "1.0.0"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
